buildscript {
    ext {
        queryDslVersion = "5.0.0:jakarta"
        restdocsApiSpecVersion = "0.17.1"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
    // querydsl
//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
    // rest docs
    id 'com.epages.restdocs-api-spec' version "${restdocsApiSpecVersion}"

}

group = 'com.devwinter'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
}

ext {
    set('springCloudVersion', "2022.0.1")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // easy-random
    testImplementation 'org.jeasy:easy-random-core:5.0.0'
    implementation 'net.datafaker:datafaker:1.8.0'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'

    // Querydsl
//    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
//    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
//    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
//    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    //Querydsl 추가
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-starter-aws
    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'

    // swaggerUI 'org.webjars:swagger-ui:4.11.1'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation "com.epages:restdocs-api-spec-mockmvc:${restdocsApiSpecVersion}"
    testAnnotationProcessor 'org.projectlombok:lombok'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

//querydsl 추가 시작

//def querydslDir = "$buildDir/generated/querydsl"
//querydsl {
//    jpa = true
//    querydslSourcesDir = querydslDir
//}
//sourceSets {
//    main.java.srcDir querydslDir
//}
//configurations {
//    querydsl.extendsFrom compileClasspath
//}
//compileQuerydsl {
//    options.annotationProcessorPath = configurations.querydsl
//}

clean {
    delete file('src/main/generated')
}

//querydsl 추가 끝

openapi3 {
    setServer("http://ec2-3-34-53-11.ap-northeast-2.compute.amazonaws.com:8080/member-service/")
    title = "회원 서비스 API"
    description = "회원 서비스 API 문서"
    version = "v1"
    format = "yaml"
    outputFileNamePrefix = 'member-api-spec'
}

//task copyTest {
//    dependsOn("openapi3")
//    copy {
//        from "$buildDir/api-spec/openapi3.yaml"
//        into "src/main/resources/static/docs/."
//    }
//}